--- a/od/es_index.html
+++ b/od/es_index.html
@@ -21,14 +21,9 @@ Aca <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletin
 Tambien encontre datos publicos sobre los famosos <a href="datamining/opendata/cinemometros">Cinemometros</a>,
 esos radares que estan en la ruta y hacen la multa si uno excede cierta velocidad.
 <br /><br />
-No podia ser menos, al desatarse esta Pandemia tuve que meterme a 
+Al desatarse esta Pandemia tuve que meterme a 
 reunir datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">covid 19</a>
-publicado en Argentina.  Pero bueno, todo dura un tiempo.<br /><br />
-
-Aunque el corazón de los Datos Abiertos no es el formato sinó su naturaleza.
-Por ejemplo, los <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Datos Abiertos de Gobierno Electorales de la República Argentina</a>.
-Es un ejemplo ideal, datos en formato texto con los resultados electorales por mes, acompañados por su
-telegrama escaneado manuscrito firmado por los presidentes de mesa.</li>
+publicado en Argentina.<br /><br />
 
 <u><b>Análisis de datos electorales</b></u><br />
 Tuve una epoca de pasion por los <a href="../od/es_index.html">Datos Abiertos</a> y muchos
