--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -29,7 +29,7 @@ y tarjetas de credito impresas son aplicaciones de gran uso.
 <br />
 <a href="/dm/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 1)</a><br />
 <a href="http://datamining.dc.uba.ar/datamining/Files/Tesis/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 2)</a><br />
-<a href="">Link a la tesis (Spanish)</a><br />
+<a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Link a la tesis (Spanish)</a><br />
 </br>
 </br>
 
