--- a/od/es_index.html
+++ b/od/es_index.html
@@ -7,6 +7,7 @@
 <center>
 <table width="900px">
 <tr><td>
+<h1>Datos Abiertos</h1>
 Al conocer lo que son los Datos Abiertos, tras completar mi <a href="../dm/es_index.html">tesis</a> usando los Datos Abiertos
 de Gobierno de Resultados 
 Electorales (<a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm" target="_new">decreto 117/2016</a>)
@@ -26,8 +27,8 @@ reunir datos de <a href="https://github.com/wlamagna/datamining/tree/master/open
 publicado en Argentina.<br /><br />
 
 <u><b>Análisis de datos electorales</b></u><br />
-Tuve una epoca de pasion por los <a href="../od/es_index.html">Datos Abiertos</a> y muchos
-son de índole política, sobre todo los Datos Abiertos de Gobierno.
+Tuve una epoca de mucho interes por los Datos Abiertos.  Gran parte de los Datos Publicos son de
+temas vinculados a la política, sobre todo los Datos Abiertos de Gobierno.
 Durante las elecciones es un verdadero festivál de datos y no podía perdermelo,
 por eso hice este estudio:
 <a href="el1.html">¿ Porqué en el 2013 el partido político Convergencia Popular Porteña obtuvo 0 votos ?</a><br />
