--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <table width="900">
 <tr>
 <td>
-Bienvenido!  En esta pagina intentare organizar los proyectos de interes.  Aprendi tanto de otros
+<h1>Bienvenido!</h1>
+En esta pagina intentare organizar los proyectos de interes.  Aprendi tanto de otros
 que quiero hacer tambien mi aporte, como una forma de agradecer.
 <br />
 <br />
