--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -6,6 +6,7 @@
 <center>
 <table width="900px">
 <tr><td>
+<h1>Datamining</h1>
 Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos, y pese a que
 hay muchisimos datos dando vueltas, no todos pueden ser utilizados con libertad, la gran
 mayoria son privados y estan bajo licencias y condiciones que casi nadie lee.<br />
