--- a/od/es_index.html
+++ b/od/es_index.html
@@ -22,9 +22,10 @@ Aca <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletin
 Tambien encontre datos publicos sobre los famosos <a href="datamining/opendata/cinemometros">Cinemometros</a>,
 esos radares que estan en la ruta y hacen la multa si uno excede cierta velocidad.
 <br /><br />
-Al desatarse esta Pandemia tuve que meterme a 
-reunir datos de <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">covid 19</a>
-publicado en Argentina.<br /><br />
+Durante la Pandemia de Covid 19 estuve reuniendo
+<a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">datos</a> y estudiando los
+reportes del Ministerio de Salud de la Republica Argentina.
+<br /><br />
 
 <u><b>Análisis de datos electorales</b></u><br />
 Tuve una epoca de mucho interes por los Datos Abiertos.  Gran parte de los Datos Publicos son de
@@ -32,7 +33,6 @@ temas vinculados a la política, sobre todo los Datos Abiertos de Gobierno.
 Durante las elecciones es un verdadero festivál de datos y no podía perdermelo,
 por eso hice este estudio:
 <a href="el1.html">¿ Porqué en el 2013 el partido político Convergencia Popular Porteña obtuvo 0 votos ?</a><br />
-
 
 <br />
 En Argentina tenemos algo valiosísimo, en época de elecciones se pueden visualizar los votos que recibió cada candidato en cada mesa; pero no solo eso, tenemos el telegrama escaneado manuscrito:  este documento es valiosísimo ya que da constancia incuestionable de qué ocurrió en esa mesa esa noche.
