--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <td>
 <h1>Bienvenido!</h1>
 En esta pagina intentare organizar los proyectos de interes.  Aprendi tanto de otros
-que quiero hacer tambien mi aporte, como una forma de agradecer.
+que quiero hacer tambien mi aporte, como una forma de retribuir.
 <br />
 <br />
 Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>,
