--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_n
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
-Desde los 10 años que programo, comencé con BASIC aunque la curiosidad inagotable me llevó a
-aprender assembler y querer comprender los nuevos y emergentes desafios de la informática.
-Como joven SysOp de un BBS mi hobby de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Sysadmin</a> se
+Lo que en un comienzo era un hobby de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Sysadmin</a> se
 convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
 la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA donde
 obtuve el titulo de Magister con mi Tesis Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
