--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -7,9 +7,9 @@
 <table width="900px">
 <tr><td>
 <h1>Datamining</h1>
-Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos, y pese a que
-hay muchisimos datos dando vueltas, no todos pueden ser utilizados con libertad, la gran
-mayoria son privados y estan bajo licencias y condiciones que casi nadie lee.<br />
+Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos.  Aunque estemos
+rodeados de datos, muchos no se pueden utilizar con libertad por ser privados abarcados por
+licencias y terminos de uso que casi nadie lee.<br />
 Es por eso que cuando buscaba tema de tesis, recorri varias opciones pero siempre me encontraba
 con el obstaculo de los datos: no tenia un permiso formal de poder utilizarlos, no conocia
 a alguien que tuviese interes en ser sponsor de mi tesis al menos proveyendo los Datos.<br />
