--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -10,8 +10,8 @@
 Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos.  Aunque estemos
 rodeados de datos, muchos no se pueden utilizar con libertad por ser privados abarcados por
 licencias y terminos de uso que casi nadie lee.<br />
-Es por eso que cuando buscaba tema de tesis, recorri varias opciones pero siempre me encontraba
-con el obstaculo de los datos: no tenia un permiso formal de poder utilizarlos, no conocia
+Este fue uno de los problemas cuando buscaba tema de tesis, estuve mucho tiempo abordando y
+descartando temas por el obstaculo de los datos: no tenia un permiso formal de poder utilizarlos, no conocia
 a alguien que tuviese interes en ser sponsor de mi tesis al menos proveyendo los Datos.<br />
 Fue asi como los <a href="../od/es_index.html">Datos Abiertos</a> cobraron importancia en mi carrera, porque al igual que
 el software libre podia utilizarlos, modificarlos, compartirlos sin tener que depender de 
