--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -9,14 +9,12 @@
 <h1>Datamining</h1>
 Para hacer Datamining y descubrimiento del conocimiento se necesitan Datos.  Aunque estemos
 rodeados de datos, muchos no se pueden utilizar con libertad por ser privados abarcados por
-licencias y terminos de uso que casi nadie lee.<br />
-Este fue uno de los problemas cuando buscaba tema de tesis, estuve mucho tiempo abordando y
-descartando temas por el obstaculo de los datos: no tenia un permiso formal de poder utilizarlos, no conocia
-a alguien que tuviese interes en ser sponsor de mi tesis al menos proveyendo los Datos.<br />
-Fue asi como los <a href="../od/es_index.html">Datos Abiertos</a> cobraron importancia en mi carrera, porque al igual que
-el software libre podia utilizarlos, modificarlos, compartirlos sin tener que depender de 
-conocer a la persona indicada.<br />
-
+licencias y terminos de uso que casi nadie lee.<br /><br />
+Justamente este fue uno de los obstaculos cuando buscaba tema de tesis, estuve mucho tiempo abordando y
+descartando temas por no tener datos que pueda usar libremente.
+Fue asi como me encontre con los <a href="../od/es_index.html">Datos Abiertos</a> que de manera similar
+al software libre podia: utilizarlos, modificarlos, compartirlos <b>libremente</b>.
+<br /><br />
 Mi tesis se trata de <b>Lectura artificial de números manuscritos en 
 datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires</b>.
 El reconocimiento de dígitos manuscritos es un tema que ocupa distintas areas 
