--- a/dm/es_index.html
+++ b/dm/es_index.html
@@ -26,10 +26,9 @@ Para citar algunos ejemplos la gestión automática de correo postal, procesamie
 de cheques bancarios, ingreso manual de datos en formularios, registros gubernamentales 
 y tarjetas de credito impresas son aplicaciones de gran uso.
 <br />
-<a href="ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 1)</a><br />
-<a href="http://datamining.dc.uba.ar/datamining/Files/Tesis/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 2)</a><br />
+<a href="ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 1)</a>&nbsp;|&nbsp;
+<a href="http://datamining.dc.uba.ar/datamining/Files/Tesis/ResumenTesisWalterLamagna.pdf">Resumen de la Tesis (link 2)</a>&nbsp;|&nbsp;
 <a href="http://digital.bl.fcen.uba.ar/download/tesis/tesis_n6105_Lamagna.pdf">Link a la tesis (Spanish)</a><br />
-</br>
 </br>
 
 También exploré lo que es el <u><b>análisis de redes sociales</b></u>, y aca comparto un
