--- a/od/es_index.html
+++ b/od/es_index.html
@@ -8,10 +8,11 @@
 <table width="900px">
 <tr><td>
 <h1>Datos Abiertos</h1>
-Al conocer lo que son los Datos Abiertos, tras completar mi <a href="../dm/es_index.html">tesis</a> usando los Datos Abiertos
-de Gobierno de Resultados 
-Electorales (<a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm" target="_new">decreto 117/2016</a>)
-segui explorando el tema y recorri algunos caminos:<br />
+Como comentaba en la pagina sobre Datamining, los Datos Abiertos hicieron posible mi <a href="../dm/es_index.html">tesis</a> cuyo tema
+principal son los Datos Abiertos de Gobierno con Resultados 
+Electorales disponibles para su uso segun 
+<a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm" target="_new">decreto 117/2016</a>.
+<br />
 <br />
 Analisis del <a href="datamining/opendata/boletinoficial/index.html">Boletin Oficial</a> de la Republica Argentina.
 El "Boletin Oficial" es publico, todo el mundo puede accederlo. Aplique sobre el mismo algo de  
