--- a/od/es_index.html
+++ b/od/es_index.html
@@ -8,7 +8,8 @@
 <table width="900px">
 <tr><td>
 <h1>Datos Abiertos</h1>
-Como comentaba en la pagina sobre Datamining, los Datos Abiertos hicieron posible mi <a href="../dm/es_index.html">tesis</a> cuyo tema
+Como comentaba en la pagina sobre <a href="../dm/es_index.html">Datamining</a>, 
+los Datos Abiertos hicieron posible mi <a href="../dm/es_index.html">tesis</a> cuyo tema
 principal son los Datos Abiertos de Gobierno con Resultados 
 Electorales disponibles para su uso segun 
 <a href="http://servicios.infoleg.gob.ar/infolegInternet/anexos/255000-259999/257755/norma.htm" target="_new">decreto 117/2016</a>.
