--- a/od/es_index.html
+++ b/od/es_index.html
@@ -29,10 +29,9 @@ Durante la Pandemia de Covid 19 estuve reuniendo
 reportes del Ministerio de Salud de la Republica Argentina.
 <br /><br />
 
-Datos Abiertos del Banco Mundial y 
+Utilizando Datos Abiertos del Banco Mundial y visualice
 <a href="datamining/opendata/boletinoficial/deuda_banco_mundial.html" target="_new">
-visualizacion de la deuda con la Republica Argentina.
-</a><br />
+prestamos</a> adquiridos por la Republica Argentina y los destinos de dichos prestamos.<br />
 <br />
 
 Datos Abiertos del Servicio Meteorologico Nacional.  Procese los datos y arme un
