--- a/od/es_index.html
+++ b/od/es_index.html
@@ -29,9 +29,7 @@ Durante la Pandemia de Covid 19 estuve reuniendo
 reportes del Ministerio de Salud de la Republica Argentina.
 <br /><br />
 
-Utilizando Datos Abiertos del Banco Mundial y visualice
-<a href="datamining/opendata/bancomundial/deuda_banco_mundial.html" target="_new">
-prestamos</a> adquiridos por la Republica Argentina y los destinos de dichos prestamos.<br />
+Datos Abiertos de el <a href="datamining/opendata/bancomundial/" target="_new">Banco Mundial</a>.
 <br />
 
 Datos Abiertos del Servicio Meteorologico Nacional.  Procese los datos y arme un
