--- a/od/es_index.html
+++ b/od/es_index.html
@@ -29,7 +29,7 @@ Durante la Pandemia de Covid 19 estuve reuniendo
 reportes del Ministerio de Salud de la Republica Argentina.
 <br /><br />
 
-Datos Abiertos de el <a href="datamining/opendata/bancomundial/" target="_new">Banco Mundial</a>.
+Datos Abiertos del <a href="datamining/opendata/bancomundial/" target="_new">Banco Mundial</a>.
 <br />
 
 Datos Abiertos del Servicio Meteorologico Nacional.  Procese los datos y arme un
