--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@ la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA donde
 obtuve el titulo de Magister con mi Tesis Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
 <br />
 <br />
-Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a>, otras veces
-sobre mis aventuras y desventuras en el <a href="https://descubrowindsurf.blogspot.com/">Windsurf</a>.
+Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a> y tambien me gusta
+compartir notas sobre <a href="https://descubrowindsurf.blogspot.com/" target=_blank>Windsurf</a>.
 <br />
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
 </td></tr></table>
-
 </center>
 <br />
 <br />
