--- a/od/es_index.html
+++ b/od/es_index.html
@@ -27,8 +27,10 @@ Text Mining y Visualizacion de contratos, deuda adquirida, solicitudes de armas 
 Aca <a href="https://github.com/wlamagna/datamining/tree/master/opendata/boletinoficial">github</a> de esas epocas.
 <br />
 <br />
-Tambien encontre datos publicos sobre los <a href="datamining/opendata/cinemometros">Cinemometros</a>.  Un cinemometro
+Datos publicos sobre los <a href="datamining/opendata/cinemometros">Cinemometros</a>.  Un cinemometro
 es un radar que hace multa si uno excede cierta velocidad.
+<br /><br />
+Datos Abiertos de la <a href="datamining/opendata/cortesuprema">Corte Suprema de Justicia</a>.
 <br /><br />
 Durante la Pandemia de Covid 19 estuve reuniendo
 <a href="https://github.com/wlamagna/datamining/tree/master/opendata/covid19argentina">datos</a> y estudiando los
