--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_n
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
 Lo que en un comienzo era un hobby de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Sysadmin</a> se
-convirtió en mi trabajo.  Fue clave para mi desarrollo profesional hacer
-la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA donde
-obtuve el titulo de Magister con mi Tesis Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
+convirtió en mi trabajo.  Como me apasiona la informatica, decidi cursar la carrera de <a href="DSCF1021.JPG">Ingenieria en Sistemas</a>
+en la UAI, posteriormente me encantó lo que fué la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA y sin proponermelo
+todo este tema se convirtió en algo muy mencionado en la actualidad.  Obtuve el titulo de Magister con mi Tesis 
+Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
 <br />
 <br />
 Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a> y tambien me gusta
