--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Lectura artificial de números manuscritos en datos abiertos de elecciones legis
 <br />
 <br />
 Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a> y tambien me gusta
-compartir notas sobre <a href="https://descubrowindsurf.blogspot.com/" target=_blank>Windsurf</a>.
+compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
 <br />
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
