--- a/windsurf/index.html
+++ b/windsurf/index.html
@@ -11,13 +11,15 @@
 <tr>
 <td>
 <h1>Windsurfing</h1>
-En el 2009 fue realmente que me intereso probar este deporte.
+En el 2009 fue realmente que me intereso probar este deporte.  En aquel entonces me la pase
+realmente con muchas caidas, lo dificil que es este deporte!
 <br />
 <img src="100_0290.jpg" width=300 />
 <img src="100_0291.jpg" width=300 />
 
 <br />
 <br />
+Mas de 10 años mas tarde, retomo:<br />
 Mi <a href="https://descubrowindsurf.blogspot.com/" target=_blank>diario</a> sobre este hermoso deporte.
 <br /><br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
