--- a/windsurf/index.html
+++ b/windsurf/index.html
@@ -22,6 +22,12 @@ realmente con muchas caidas, lo dificil que es este deporte!
 Mas de 10 años mas tarde, retomo:<br />
 Mi <a href="https://descubrowindsurf.blogspot.com/" target=_blank>diario</a> sobre este hermoso deporte.
 <br /><br />
+Un video hecho en el Rio de la Plata el Sabado 27 de Febrero:
+<br />
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DLVQLkYwDDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br />
+
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
 </td></tr></table>
