--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ Lectura artificial de números manuscritos en datos abiertos de elecciones legis
 Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a> y tambien me gusta
 compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
 <br />
+
+Proyectos varios:<br />
+<a href="agenda.html">Mini agenda</a><br />
+
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
