--- a/agenda.html
+++ b/agenda.html
@@ -16,7 +16,7 @@ dificil de llevar.  Algo intermedio, entre todo digital en la nube y una especie
 con muchas hojas que quedan sin usar.
 
 <br />
-<a href="Agenda.ods">Agenda v1 2021</a><br />
+<a href="Agenda.pdf">Agenda v1 2021</a><br />
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
