--- a/agenda.html
+++ b/agenda.html
@@ -14,7 +14,9 @@
 Las agendas convencionales ocupan mucho lugar, muchas hojas, y a mi al menos me resultan
 dificil de llevar.  Algo intermedio, entre todo digital en la nube y una especie de libreta
 con muchas hojas que quedan sin usar.
-
+Es una mini agenda, se imprimite en doble faz y recorda para luego solo unirla y abrocharla.
+A mi al menos me resulta util, la subo aca como un "backup" compartido.
+<br />
 <br />
 <a href="Agenda.pdf">Agenda v1 2021</a><br />
 <br />
