--- a/agenda.html
+++ b/agenda.html
@@ -25,6 +25,9 @@ Si hay algún tema que le gustaría que desarrolle en el blog, simplemente comé
 </td></tr></table>
 </center>
 <br />
+<a href="/">Inicio</a>
+
+<br />
 <br />
 </body>
 </html>
