--- a/agenda.html
+++ b/agenda.html
@@ -22,10 +22,12 @@ A mi al menos me resulta util, la subo aca como un "backup" compartido.
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
+<br /><br />
+<br />
+<a href="/webpage/">Inicio</a>
 </td></tr></table>
 </center>
 <br />
-<a href="/">Inicio</a>
 
 <br />
 <br />
