--- a/ingeniero.html
+++ b/ingeniero.html
@@ -15,6 +15,11 @@ Me recibi tras mucho esfuerzo en el 2007 de Ing. en Sistemas.
 <br />
 <img src="DSCF1021.JPG" width=300 />
 <img src="IMG_1566.JPG" width=300 />
+<img src="IMG_1564.JPG" width=300 />
+<br />
+<img src="IMG_1563.JPG" width=300 />
+<br />
+
 
 <br />
 <br />
