--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
 <br />
 <br />
 Proyectos varios:<br />
+Algunos proyectos con <a href="android.html">Android</a><br />
 <a href="agenda.html">Mini agenda</a><br />
 
 <br />
