--- a/android.html
+++ b/android.html
@@ -19,6 +19,8 @@ Hoy es un paraiso en ese sentido, y se consiguen libros para aprender casi cualq
 <br />
 <a href="https://github.com/wlamagna/Android/tree/main/GpsTracker" target=_new>Acceso a datos GPS con Android 2.3 (GingerBread)</a>
 <br />
+Y trabajar con datos gps, con <a href="https://activityworkshop.net/software/gpsprune/" target=_new>gpsprune</a>
+de linux muy buena utilidad.<br />
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
