--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@ compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
 <br />
 <br />
 Proyectos varios:<br />
-Algunos proyectos con <a href="android.html">Android</a><br />
+Algunos proyectos con <a href="android/">Android</a><br />
 <a href="agenda.html">Mini agenda</a><br />
+<a href="ecologia.html">Ecologia</a><br />
 
 <br />
 <br />
