--- a/android/index.html
+++ b/android/index.html
@@ -19,10 +19,16 @@ Hoy es un paraiso en ese sentido, y se consiguen libros para aprender casi cualq
 <br />
 <a href="https://github.com/wlamagna/Android/tree/main/GpsTracker" target=_new>Acceso a datos GPS con Android 2.3 (GingerBread)</a>
 <br />
+<img src="IMG_20210606_135814_590.jpg" width=200 />
+<br />
 Y trabajar con datos gps, con <a href="https://activityworkshop.net/software/gpsprune/" target=_new>gpsprune</a>
 de linux muy buena utilidad.  Un recorrido de ejemplo por <a href="Saavedra_ida_2020-10-01_18-20-58.gps">Saavedra en GPX</a>
 y exportado a <a href="Saavedra_ida_2020-10-01_18-20-58.csv">csv</a>.
 <br />
+El programa por el momento almacena la fecha/hora, latitud, longitud y altura en un micro sd del dispositivo,
+luego hay que montarlo y abrirlo con gpsprube por ejemplo.<br />
+
+
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
 </td></tr></table>
