--- a/android/index.html
+++ b/android/index.html
@@ -19,7 +19,15 @@ Hoy es un paraiso en ese sentido, y se consiguen libros para aprender casi cualq
 <br />
 <a href="https://github.com/wlamagna/Android/tree/main/GpsTracker" target=_new>Acceso a datos GPS con Android 2.3 (GingerBread)</a>
 <br />
+<table>
+<tr>
+<td>
 <img src="IMG_20210606_135814_590.jpg" width=200 />
+</td><td>
+<img src="DeepinScreenshot_select-area_20210606172120.png" width="200" />
+</td>
+</tr>
+</table>
 <br />
 Y trabajar con datos gps, con <a href="https://activityworkshop.net/software/gpsprune/" target=_new>gpsprune</a>
 de linux muy buena utilidad.  Un recorrido de ejemplo por <a href="Saavedra_ida_2020-10-01_18-20-58.gps">Saavedra en GPX</a>
