--- a/android/index.html
+++ b/android/index.html
@@ -17,6 +17,18 @@ Hoy es un paraiso en ese sentido, y se consiguen libros para aprender casi cualq
 <br />
 <br />
 <br />
+Problema a resolver: Un dia estaba haciendo windsurf en el rio y llevaba el celular en una bolsa estanca
+a la que no entra el agua, lamentablemente un poco por cansancio y un poco por desconocimiento se rompio
+el sujeta celular y este se cayo al fondo del rio.  Pese a mis intentos, no pude encontrarlo, una 
+situacion realmente triste.  Hoy los celulares son grandes, tienen baterias que no se pueden extraer,
+y por otro lado tengo guardado un celular de hace 10 años atras, una mini computadora !  El poder de 
+estos aparatitos es impresionante, y muchos quedan guardados sin usarse aunque siguen teniendo
+un potencial.  Tenia un Samsung I5500, este viene con Android 2.2 pero con CyanogenMod habia pasado a 2.3.
+Con el SDK de Eclipse pude abrir unos antiguos proyectos y hacer un programita que registre las coordenadas
+de GPS.  El celular es pequeño, entra en un bolsillo del chaleco salvavidas, por lo que puedo registar
+al menos las coordenadas y luego visualizar por donde estuve navegando.
+<br />
+
 <a href="https://github.com/wlamagna/Android/tree/main/GpsTracker" target=_new>Acceso a datos GPS con Android 2.3 (GingerBread)</a>
 <br />
 <table>
