--- a/android/index.html
+++ b/android/index.html
@@ -12,9 +12,8 @@
 <td>
 <h1>Android</h1>
 Recuerdo cuando tenia 14, 15 años, lo dificil que era tener acceso a
-la información, los libros eran tan caros que casi que uno tenia que robarlos ! (chiste)<br />
+la información, los libros eran tan caros que casi que uno tenia que robarlos ! <b>(chiste)</b>
 Hoy es un paraiso en ese sentido, y se consiguen libros para aprender casi cualquier cosa.
-<br />
 <br />
 <br />
 Problema a resolver: Un dia estaba haciendo windsurf en el rio y llevaba el celular en una bolsa estanca
