--- a/android/index.html
+++ b/android/index.html
@@ -41,8 +41,7 @@ al menos las coordenadas y luego visualizar por donde estuve navegando.
 </table>
 <br />
 Y trabajar con datos gps, con <a href="https://activityworkshop.net/software/gpsprune/" target=_new>gpsprune</a>
-de linux muy buena utilidad.  Un recorrido de ejemplo por <a href="Saavedra_ida_2020-10-01_18-20-58.gps">Saavedra en GPX</a>
-y exportado a <a href="Saavedra_ida_2020-10-01_18-20-58.csv">csv</a>.
+de linux muy buena utilidad.  Un recorrido de ejemplo por <a href="06-06-2021-034415gps.gps">Parque Samiento</a>.
 <br />
 El programa por el momento almacena la fecha/hora, latitud, longitud y altura en un micro sd del dispositivo,
 luego hay que montarlo y abrirlo con gpsprube por ejemplo.<br />
