--- a/android/index.html
+++ b/android/index.html
@@ -16,10 +16,12 @@ la información, los libros eran tan caros que casi que uno tenia que robarlos !
 Hoy es un paraiso en ese sentido, y se consiguen libros para aprender casi cualquier cosa.
 <br />
 <br />
-Problema a resolver: Un dia estaba haciendo windsurf en el rio y llevaba el celular en una bolsa estanca
+<b>Problema</b>: Un dia estaba haciendo windsurf en el rio y llevaba el celular en una bolsa estanca
 a la que no entra el agua, lamentablemente un poco por cansancio y un poco por desconocimiento se rompio
 el sujeta celular y este se cayo al fondo del rio.  Pese a mis intentos, no pude encontrarlo, una 
-situacion realmente triste.  Hoy los celulares son grandes, tienen baterias que no se pueden extraer,
+situacion realmente triste.<br />
+<br />
+<b>Solucion:</b>: Hoy los celulares son grandes, tienen baterias que no se pueden extraer,
 y por otro lado tengo guardado un celular de hace 10 años atras, una mini computadora !  El poder de 
 estos aparatitos es impresionante, y muchos quedan guardados sin usarse aunque siguen teniendo
 un potencial.  Tenia un Samsung I5500, este viene con Android 2.2 pero con CyanogenMod habia pasado a 2.3.
