--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@ compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
 <br />
 <br />
 Proyectos varios:<br />
-Algunos proyectos con <a href="android/">Android</a><br />
-<a href="agenda.html">Mini agenda</a><br />
-<a href="ecologia.html">Ecologia</a><br />
+Algunos programitas para <a href="android/">Android</a>.<br />
+Una <a href="agenda.html">mini agenda</a> personalizada.<br />
+Temas de <a href="ecologia.html">Reciclado/Reutilizacion</a>.<br />
+Unas distros personalizadas que hice de <a href="linux.html">Linux</a> que mantengo.<br />
 
 <br />
 <br />
