--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Proyectos varios:<br />
 Algunos programitas para <a href="android/">Android</a>.<br />
 Una <a href="agenda.html">mini agenda</a> personalizada.<br />
 Temas de <a href="ecologia.html">Reciclado/Reutilizacion</a>.<br />
-Unas distros personalizadas que hice de <a href="linux.html">Linux</a> que mantengo.<br />
+Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.<br />
 
 <br />
 <br />
