--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@ Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico<
 compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
 <br />
 <br />
-Proyectos varios:<br />
-Algunos programitas para <a href="android/">Android</a>.<br />
-Una <a href="agenda.html">mini agenda</a> personalizada.<br />
-Temas de <a href="ecologia.html">Reciclado/Reutilizacion</a>.<br />
-Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.<br />
+<b>Proyectos varios:</b><br />
+<ul>
+<li><a href="android/">Android</a>.</li>
+<li>Una <a href="agenda.html">mini agenda</a> personalizada.</li>
+<li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
+<li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
+</ul>
 
 <br />
 <br />
