--- a/linux.html
+++ b/linux.html
@@ -21,7 +21,9 @@ y asi pude concretar otro proyecto que tenia en mente: una distro de linux boote
 una compu sin disco rígido para usar como Firewall.
 Si quiere descargar aca. (link en progreso).<br />
 <br />
-Otro proyecto similar fue una distro con zoom, no pude encontrar una y asi puedo bootear 
+Otro proyecto similar es 
+una <a href="https://drive.google.com/file/d/13nXQFm83Wd-N2XAzbImKgjjmu2V5jF-K/view?usp=sharing">distro con zoom</a>, 
+no pude encontrar una y asi puedo bootear 
 cualquier computadora con el pendrive y tener zoom sin necesidad de instalarlo.  Facil y práctico,
 portatil para tener conferencias donde sea cuando sea !<br />
 Si quiere descargar aca. (link en progreso).<br />
