--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_n
 Lo que en un comienzo era un hobby de <a href="https://serverlinux.blogspot.com/" target="_new">Sysadmin</a>
 curioso de temas de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Assm/Ansi C</a> se
 convirtió en mi trabajo.  Como me apasiona la informatica, decidi cursar la carrera de <a href="ingeniero.html">Ingenieria en Sistemas</a>
-en la UAI, luego mi primer inversion importante fue una certificacion de 
-<a href="https://www.amazon.com/Certified-Administrator-Solaris-310-200-310-202/dp/0072229594" target=_new>SUN Solaris SCSA</a>
+en la UAI, luego mi primer inversion importante fue una certificacion de <a href="suncert.html">SUN Solaris SCSA</a>
 como para darle un marco formal a mi experiencia como unix Sys Admin;
 posteriormente me encantó lo que fué la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA y sin proponermelo
 todo este tema se convirtió en algo muy mencionado en la actualidad.  Obtuve el titulo de Magister con mi Tesis 
