--- a/suncert.html
+++ b/suncert.html
@@ -16,8 +16,8 @@ industria.  La primera inversion post universidad fue la de Sun Solaris 10.  Fue
 de varios meses de preparacion, leer libros, estudiar y asimilar todas las caracteristicas 
 de este sistema.
 <br />
-
-
+Tras aprobar los dos examenes obtuve mi <a href="https://www.dropbox.com/s/lld8fexv7gzn1kx/suncert.jpg?dl=0" target=_new>Certificado</a>.
+<br />
 <br />
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
