--- a/suncert.html
+++ b/suncert.html
@@ -19,6 +19,9 @@ de este sistema.
 Tras aprobar los dos examenes obtuve mi <a href="https://www.dropbox.com/s/lld8fexv7gzn1kx/suncert.jpg?dl=0" target=_new>Certificado</a>.
 <br />
 <br />
+Tengo otros cursos hechos por Coursera pero no voy a detallarlos aqui, estan en 
+<a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target=_new>Linkedin</a>.
+<br />
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
 Si hay algún tema que le gustaría que desarrolle en el blog, simplemente coménteme.
