--- a/index.html
+++ b/index.html
@@ -30,16 +30,13 @@ todo este tema se convirtió en algo muy mencionado en la actualidad.  Obtuve el
 Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
 <br />
 <br />
-Aveces escribo en <a href="https://serverlinux.blogspot.com">este blog técnico</a> y tambien me gusta
-compartir notas sobre <a href="windsurf/" target=_blank>Windsurf</a>.
-<br />
-<br />
 <b>Proyectos varios:</b><br />
 <ul>
 <li><a href="android/">Android</a>.</li>
 <li>Una <a href="agenda.html">mini agenda</a> personalizada.</li>
 <li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
+<li>Blog sobre <a href="windsurf/" target=_blank>Windsurf</a>.</li>
 </ul>
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
