--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Lectura artificial de números manuscritos en datos abiertos de elecciones legis
 <li>Una <a href="agenda.html">mini agenda</a> personalizada.</li>
 <li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
-<li>Blog sobre <a href="windsurf/" target=_blank>Windsurf</a>.</li>
+<li>Notas sobre <a href="windsurf/">Windsurf</a>.</li>
 </ul>
 <br />
 Si quiere, puede <a href="https://www.paypal.com/donate?hosted_button_id=FSJNEZTA8Z7DS">invitarme un cafe</a>.
