--- a/cert/index.html
+++ b/cert/index.html
@@ -16,8 +16,6 @@ industria.  La primera inversion post universidad fue la de Sun Solaris 10.  Fue
 de varios meses de preparacion, leer libros, estudiar y asimilar todas las caracteristicas 
 de este sistema.
 <br />
-
-<img src="20210617_102724~2.jpg" width=100 />
 <img src="20210617_102643~2.jpg" width=100 />
 <img src="20210617_102627~2.jpg" width=100 />
 <img src="20210617_102452~2.jpg" width=100 />
@@ -27,10 +25,9 @@ de este sistema.
 <img src="20210617_102304~2.jpg" width=100 />
 <img src="20210617_102147~2.jpg" width=100 />
 <img src="20210617_102104~2.jpg" width=100 />
-
-
 <br />
-Tras aprobar los dos examenes obtuve mi <a href="https://www.dropbox.com/s/lld8fexv7gzn1kx/suncert.jpg?dl=0" target=_new>Certificado</a>.
+Finalmente me enviaron el certificado y significo una gran felicidad tras tanto esfuerzo:<br />
+<img src="20210617_102724~2.jpg" width=200 />
 <br />
 <br />
 Tengo otros cursos hechos por Coursera pero no voy a detallarlos aqui, estan en 
