--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <link rel="shortcut icon" href="/favicon.ico?v=6cd6089ee7f6">
 </head>
 
-<frameset rows="40,*" border="0">
-	<frame name="alto" src="en_top.html" scrolling="no">
+<frameset rows="50,*" border="0">
+	<frame name="alto" src="top.html" scrolling="no">
 	<frame name="central" src="en_central.html"> 
 </frameset> 
 </html>
