--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 <frameset rows="50,*" border="0">
 	<frame name="alto" src="top.html" scrolling="no">
-	<frame name="central" src="en_central.html"> 
-</frameset> 
+	<frame name="central" src="english/central.html">
+</frameset>
 </html>
-
