--- a/spanish/central.html
+++ b/spanish/central.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Walter - Mi Pagina web !</title>
+<title>Mi pagina web personal !</title>
 </head>
 <body style="font-family: Arial;">
 <br />
