--- a/top.html
+++ b/top.html
@@ -16,8 +16,8 @@ a:visited {color: #b3ffff; text-decoration: underline; }
 a:hover {color: #ff0000; text-decoration: none; }
 </style>
 <div style="font-weight: bold; font-size: 12px; color: #b3ffff;">
-<a href="es_central.html" target="central"><img src="icon_argentina.png" width=20 /></a>
-<a href="en_central.html" target="central"><img src="icon_us.png" width=20 /></a>
+<a href="spanish/central.html" target="central"><img src="icon_argentina.png" width=20 /></a>
+<a href="english/central.html" target="central"><img src="icon_us.png" width=20 /></a>
 </div>
 </body>
 </html>
