--- a/english/central.html
+++ b/english/central.html
@@ -14,19 +14,17 @@
 This page will be where I attempt to organize projects of interest. I've gained so much knowledge from others, and now I want to make my own contribution as a way to return the favor.
 <br />
 <br />
-Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_new">Linkedin</a>,
+Mi <a href="https://www.linkedin.com/in/walter-lamagna/" target="_new">Linkedin</a>,
 <a href="https://twitter.com/walamagna" target="_new">Twitter</a>, 
-<a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
+<a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> and
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
-Lo que en un comienzo era un hobby de <a href="https://serverlinux.blogspot.com/" target="_new">Sysadmin</a>
-curioso de temas de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Assm/Ansi C</a> se
-convirtió en mi trabajo.  Como me apasiona la informatica, decidi cursar la carrera de <a href="ingeniero.html">Ingenieria en Sistemas</a>
-en la UAI, luego mi primer inversion importante fue una certificacion de <a href="cert/">SUN Solaris SCSA</a>
-como para darle un marco formal a mi experiencia como unix Sys Admin;
-posteriormente me encantó lo que fué la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA y sin proponermelo
-todo este tema se convirtió en algo muy mencionado en la actualidad.  Obtuve el titulo de Magister con mi Tesis 
-Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
+As I'm passionate about IT, I decided to study <a href="ingeniero.html"></a>Systems Engineering</a> at UAI. 
+My second significant investment 
+was a <a href="cert/">SUN Solaris SCSA certification</a>, which formalized my experience as a Unix SysAdmin/SysOp. 
+Later, during my time at IBM, I pursued a Master's in Data Mining (Data Science) at UBA, where 
+I earned my Master's degree with my thesis, "Artificial Reading of Handwritten Numbers in 
+Open Data from Legislative Elections in the City of Buenos Aires."
 <br />
 <br />
 <b>Proyectos varios:</b><br />
