--- a/spanish/central.html
+++ b/spanish/central.html
@@ -20,13 +20,11 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/?locale=es_ES" target="_n
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> y 
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
-Lo que en un comienzo era un hobby de <a href="https://serverlinux.blogspot.com/" target="_new">Sysadmin</a>
-curioso de temas de <a href="https://twilightbbs.wordpress.com/tag/security/" target="_new">Assm/Ansi C</a> se
-convirtió en mi trabajo.  Como me apasiona la informatica, decidi cursar la carrera de <a href="ingeniero.html">Ingenieria en Sistemas</a>
-en la UAI, luego mi primer inversion importante fue una certificacion de <a href="cert/">SUN Solaris SCSA</a>
-como para darle un marco formal a mi experiencia como unix Sys Admin;
-posteriormente me encantó lo que fué la <a href="dm/es_index.html">Maestria en Datamining</a> en la UBA y sin proponermelo
-todo este tema se convirtió en algo muy mencionado en la actualidad.  Obtuve el titulo de Magister con mi Tesis 
+Como me apasiona la informatica, decidi cursar la carrera de <a href="ingeniero.html">Ingenieria en Sistemas</a>
+en la UAI, luego mi segunda inversion importante fue una certificacion de <a href="cert/">SUN Solaris SCSA</a>
+como para darle un marco formal a mi experiencia como SysAdmin/SysOp Unix.
+Posteriormente durante mi paso por IBM hice una <a href="dm/es_index.html">Maestria en Datamining (DataScience)</a> 
+en la UBA, aqui Obtuve el titulo de Magister con mi Tesis 
 Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
 <br />
 <br />
