--- a/spanish/central.html
+++ b/spanish/central.html
@@ -28,9 +28,9 @@ en la UBA, aqui Obtuve el titulo de Magister con mi Tesis
 Lectura artificial de números manuscritos en datos abiertos de elecciones legislativas en la Ciudad de Buenos Aires.
 <br />
 <br />
-<b>Proyectos varios:</b><br />
+<b>Algunos proyectos:</b><br />
 <ul>
-<li><a href="android/">Android</a>.</li>
+<li><a href="android/">Experimentando con Android</a>.</li>
 <li>Una <a href="agenda.html">mini agenda</a> personalizada.</li>
 <li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
