--- a/english/central.html
+++ b/english/central.html
@@ -22,14 +22,14 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/" target="_new">Linkedin<
 As I'm passionate about IT, I decided to study <a href="ingeniero.html"></a>Systems Engineering</a> at UAI. 
 My second significant investment 
 was a <a href="cert/">SUN Solaris SCSA certification</a>, which formalized my experience as a Unix SysAdmin/SysOp. 
-Later, during my time at IBM, I pursued a Master's in Data Mining (Data Science) at UBA, where 
+Later, during my time at IBM, I pursued a <a href="dm/es_index.html">Master's in Data Mining (Data Science) at UBA</a>, where 
 I earned my Master's degree with my thesis, "Artificial Reading of Handwritten Numbers in 
 Open Data from Legislative Elections in the City of Buenos Aires."
 <br />
 <br />
-<b>Proyectos varios:</b><br />
+<b>Some projects:</b><br />
 <ul>
-<li><a href="android/">Android</a>.</li>
+<li><a href="android/">Experiments with Android</a>.</li>
 <li>Una <a href="agenda.html">mini agenda</a> personalizada.</li>
 <li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
