--- a/english/central.html
+++ b/english/central.html
@@ -29,8 +29,8 @@ Open Data from Legislative Elections in the City of Buenos Aires."
 <br />
 <b>Some projects:</b><br />
 <ul>
-<li><a href="android/">Experiments with Android</a>.</li>
-<li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
+<li><a href="android/">Experiments with Android</a></li>
+<li><a href="https://github.com/wlamagna/perl">Perl projects</a></li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
 <li>Notas sobre <a href="windsurf/">Windsurf</a>.</li>
 </ul>
