--- a/spanish/central.html
+++ b/spanish/central.html
@@ -30,8 +30,8 @@ Lectura artificial de números manuscritos en datos abiertos de elecciones legis
 <br />
 <b>Algunos proyectos:</b><br />
 <ul>
-<li><a href="android/">Experimentando con Android</a>.</li>
-<li>Temas de <a href="ecologia.html">Reciclado/Reutilizacion/Medio Ambientales</a>.</li>
+<li><a href="android/">Experimentando con Android</a></li>
+<li><a href="https://github.com/wlamagna/perl">Proyectos con perl</a></li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
 <li>Notas sobre <a href="windsurf/">Windsurf</a>.</li>
 </ul>
