--- a/english/central.html
+++ b/english/central.html
@@ -30,7 +30,7 @@ Open Data from Legislative Elections in the City of Buenos Aires."
 <b>Some projects:</b><br />
 <ul>
 <li><a href="android/">Experiments with Android</a></li>
-<li><a href="https://github.com/wlamagna/perl">Perl projects</a></li>
+<li><a href="https://github.com/wlamagna/perl" target="_new">Perl projects</a></li>
 <li>Mantengo dos distros personalizadas de <a href="linux.html">Linux</a>.</li>
 <li>Notas sobre <a href="windsurf/">Windsurf</a>.</li>
 </ul>
