--- a/english/central.html
+++ b/english/central.html
@@ -19,7 +19,7 @@ Mi <a href="https://www.linkedin.com/in/walter-lamagna/" target="_new">Linkedin<
 <a href="https://www.instagram.com/walmagna/" target="_new">Instagram</a> and
 <a href="https://github.com/wlamagna" target="_new">Github</a>.
 <br /><br />
-As I'm passionate about IT, I decided to study <a href="ingeniero.html"></a>Systems Engineering</a> at UAI. 
+As I'm passionate about IT, I decided to study <a href="ingeniero.html">Systems Engineering</a> at UAI. 
 My second significant investment 
 was a <a href="cert/">SUN Solaris SCSA certification</a>, which formalized my experience as a Unix SysAdmin/SysOp. 
 Later, during my time at IBM, I pursued a <a href="dm/es_index.html">Master's in Data Mining (Data Science) at UBA</a>, where 
