--- a/spanish/ingeniero.html
+++ b/spanish/ingeniero.html
@@ -1,17 +1,9 @@
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Walter - Mi Pagina web !</title>
-</head>
-<body style="font-family: Arial;">
-<br /><br />
-<br />
 <center>
 <table width="900">
 <tr>
 <td>
 <h1>Ingeniero en sistemas</h1>
-Me recibi tras mucho esfuerzo en el 2007 de Ing. en Sistemas.
+Me recibi tras mucho esfuerzo, trabajando y estudiando al mismo tiempo, en el 2007 de Ing. en Sistemas.
 <br />
 <img src="DSCF1021.JPG" width=300 />
 <img src="IMG_1566.JPG" width=300 />
@@ -19,16 +11,5 @@ Me recibi tras mucho esfuerzo en el 2007 de Ing. en Sistemas.
 <img src="IMG_1564.JPG" width=300 />
 <img src="IMG_1563.JPG" width=300 />
 <br />
-
-
-<br />
-<br />
-<br />
-<a href="/webpage/">Inicio</a>
-<br />
 </td></tr></table>
 </center>
-<br />
-<br />
-</body>
-</html>
